--- a/public/views/user/list.html
+++ b/public/views/user/list.html
@@ -20,8 +20,7 @@
 		<td>{{u.email}}</td>
 		<td>
 			<span class="btn btn-info glyphicon glyphicon-cog" title="Edit User"  ng-click="editUser($index)"></span>
-			<span ng-show="u.volunteer_id" class="btn glyphicon btn-info glyphicon-pencil" title="Edit Volunteer Profile"  ng-click="viewDetails($index)"></span>
-			<span ng-hide="u.volunteer_id" class="btn glyphicon btn-warning glyphicon-plus" title="Create Volunteer Profile"  ng-click="viewDetails($index)"></span>
+			<span class="btn glyphicon btn-info glyphicon-pencil" title="Edit Volunteer Profile"  ng-click="viewDetails($index)"></span>
 			<span class="btn btn-danger glyphicon glyphicon-remove" title="Delete User" ng-click="confirm('This will delete the user and associated volunteer profile. Proceed?') && deleteUser($index)"></span>
 		
 		</td>
