--- a/public/views/user/list.html
+++ b/public/views/user/list.html
@@ -1,7 +1,7 @@
 
 <h2>Users list</h2>
 
-<table class="table" >
+<table class="table" ng-controller="FormController as FormCtrl">
 	<tr>
 		<th>Active</th>
 		<th>Role</th>
