--- a/public/views/user/login.html
+++ b/public/views/user/login.html
@@ -1,15 +1,15 @@
 
 <form 
-	ng-controller="FormController as FormCtrl"
+	ng-controller="LoginController as LoginCtrl"
 	role="form" class="form-horizontal" novalidate 
 	name="Login"
-	ng-submit="Login.$dirty && submitForm(Login)">
+	ng-submit="Login.$dirty && login(credentials)">
 	
 	<h2>Login</h2>
 	<alert></alert>
 	<div class="form-group">
 		<label class="control-label col-sm-2">Username</label>
-		<div class="col-sm-4"><input name="username" id="username" type="text" ng-model="data.username" class="form-control" placeholder="Enter Username" ng-pattern="/^[a-z0-9]+[a-z0-9\.\-]+[a-z0-9]+$/i" ng-minlength="3" ng-maxlength="32"></div>
+		<div class="col-sm-4"><input name="username" id="username" type="text" ng-model="credentials.username" class="form-control" placeholder="Enter Username" ng-pattern="/^[a-z0-9]+[a-z0-9\.\-]+[a-z0-9]+$/i" ng-minlength="3" ng-maxlength="32"></div>
 		<div class="col-sm-6" ng-show="Login.$dirty && Login.$submitted">
 			<span class="text-danger" ng-show="!Login.username.$viewValue">Username is required.</span>
 			<span ng-show="Login.$dirty && Login.$submitted">
@@ -21,7 +21,7 @@
 	</div>
 	<div class="form-group">
 		<label class="control-label col-sm-2">Password</label>
-		<div class="col-sm-4"><input name="password" id="password" type="password" ng-model="data.password" class="form-control" required placeholder="Enter Password"></div>
+		<div class="col-sm-4"><input name="password" id="password" type="password" ng-model="credentials.password" class="form-control" required placeholder="Enter Password"></div>
 		<div class="col-sm-6" ng-show="Login.$dirty && Login.$submitted">
 			<span class="text-danger" ng-show="!Login.password.$viewValue">Password is required.</span>
 			<span class="text-danger" ng-show="Login.password.$viewValue && Login.password.$invalid">Password is invalid.</span>
