--- a/public/views/volunteer/profile.html
+++ b/public/views/volunteer/profile.html
@@ -1,5 +1,5 @@
 <section ng-controller="TabController as TabCtrl">
-	<h2>Volunteer information for {{data.username}}</h2>
+	<h2>Volunteer information for {{currentUser.username}}</h2>
 	<nav style="margin-bottom:20px;">
 	<ul class="nav nav-tabs" role="tablist">
 		<li ng-class="{'active':TabCtrl.isSet('contact')}"><a href="#" ng-click="TabCtrl.setTab('contact');">Contact Info</a></li>
