--- a/public/views/user/profile.html
+++ b/public/views/user/profile.html
@@ -59,7 +59,7 @@
 	</div>
 	<div class="form-group">
 		<div class="col-sm-6">
-			<input type="button" ng-href="/volunteers/{{data.username}}" ng-value="(data.volunteer_id?'View':'Create')+' Volunteer Details'" class="btn btn-info" >
+			<input type="button" ng-href="/volunteers/{{data.username}}" value="View Volunteer Details" class="btn btn-info" >
 			<input type="submit" value="Update" class="btn btn-primary pull-right" >
 		</div>
 	</div>
