FIX login alerts
do not allow login with bad credentials

--- a/public/views/user/login.html
+++ b/public/views/user/login.html
@@ -3,7 +3,7 @@
 	ng-controller="LoginController as LoginCtrl"
 	role="form" class="form-horizontal" novalidate 
 	name="Login"
-	ng-submit="Login.$dirty && login(credentials)">
+	ng-submit="Login.$dirty && submit(credentials)">
 	
 	<h2>Login</h2>
 	<alert></alert>
