FIX redirect on login

--- a/public/views/user/profile.html
+++ b/public/views/user/profile.html
@@ -58,8 +58,8 @@
 		</div>
 	</div>
 	<div class="form-group">
-		<div class="col-sm-6">
-			<input type="button" ng-href="/volunteers/{{data.username}}" value="View Volunteer Details" class="btn btn-info" >
+		<div class="col-sm-4 col-sm-offset-2">
+			<a ng-href="/volunteers/{{data.username}}" class="btn btn-info" >Volunteer profile</a>
 			<input type="submit" value="Update" class="btn btn-primary pull-right" >
 		</div>
 	</div>
