--- a/public/views/modal/alert.html
+++ b/public/views/modal/alert.html
@@ -1,8 +1,7 @@
-<div class="form-group"  ng-show="alert.message != null">
-	<div class="col-sm-4 col-sm-offset-2 ">
+
+	<div ng-show="alert.message != null" class="col-sm-12" ng-show="alert.message != null">
 		<div class="alert" ng-class="{'alert-danger':!alert.status,'alert-success':alert.status}">
 	  		<a class="close" data-dismiss="alert" ng-click="alert.message = null">x</a>
 	  		{{alert.message}}
 	 	</div>
  	</div>
-</div>
